--- a/mkdocs-project/mkdocs.yml
+++ b/mkdocs-project/mkdocs.yml
@@ -9,7 +9,6 @@ nav:
 - New Developer: 'dev-new/dev-new.md'
 - Software Design: 'software-design/software-design.md'
 - UI Design: 'ui-design/ui-design.md'
-- UI Design (Old): 'ui-design-old/ui-design-old.md'
 - Development Tasks:
   - Overview: dev-tasks/overview.md
   - Version Control: dev-tasks/version-control.md
@@ -43,6 +42,12 @@ copyright:  'Copyright Open Water Foundation'
 # Use extra CSS to customize styles, based on theme
 extra_css:
   - 'css/extra-material-theme.css'
+# ------------------------------------------------
+# Google Analytics
+# - see:  https://squidfunk.github.io/mkdocs-material/getting-started/#google-analytics
+google_analytics:
+ - 'UA-135465513-1'
+ - auto
 # ------------------------------------------------
 # Favicon is supposed to automatically be found:
 # - in docs/img/favicon.ico
